Correct spacing, considering new bars.

--- a/web/app/themes/clyde/assets/sass/app.scss
+++ b/web/app/themes/clyde/assets/sass/app.scss
@@ -15,7 +15,7 @@ $bootstrap-sass-asset-helper: false;
    ========================================================================== */
 
 $banner-top-margin: 37px;
-$nav-height: 50px; 
+$nav-height: 36px; 
 
 .banner {
     border-top: 1px solid #E7E7E7;
